# helix

./: .gitmodules  Cargo.toml  README.md  flake.nix  grammars.nix  languages.toml
.github/workflows/: build.yml  languages.toml  release.yml
book/src/: SUMMARY.md  configuration.md  install.md  languages.md  themes.md
book/src/guides/: README.md  adding_languages.md  rainbow_bracket_queries.md
docs/: architecture.md
helix-core/: Cargo.toml
helix-core/proptest-regressions/syntax/: test.txt
helix-core/src/: comment.rs  config.rs  diff.rs  indent.rs  object.rs  path.rs  selection.rs  syntax.rs
helix-core/src/syntax/: highlight_set.rs  span.rs  test.rs  tree_cursor.rs
helix-core/src/syntax/span/: test.rs
helix-loader/: Cargo.toml
helix-loader/src/: dictionary.rs  grammar.rs  lib.rs  tree_sitter_grammars.rs
helix-term/: Cargo.toml  build.rs
helix-term/src/: application.rs  args.rs  commands.rs  grammars.rs  health.rs  keymap.rs  lib.rs  main.rs
helix-term/src/commands/: dap.rs  lsp.rs  typed.rs
helix-term/src/keymap/: default.rs
helix-term/src/ui/: editor.rs  mod.rs  picker.rs  prompt.rs
helix-term/tests/test/: commands.rs  movement.rs
helix-view/: Cargo.toml
helix-view/src/: document.rs  editor.rs  input.rs  lib.rs  theme.rs
runtime/queries/comment/: spell.scm
runtime/queries/elixir/: highlights.scm  injections.scm
runtime/queries/rust/: rainbows.scm
runtime/queries/tsq/: spell.scm
runtime/queries/zig/: rainbows.scm
